--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">PRM392-Mobile-CarLinker</string>
+    
+    <!-- Chat Strings -->
+    <string name="type_message">Type a message…</string>
+    <string name="send_message">Send message</string>
+    <string name="attach_file">Attach file</string>
+    <string name="image_message">Image message</string>
+    <string name="no_messages">No messages</string>
+    <string name="no_chat_rooms">No chat conversations yet</string>
 </resources>
